style: fix gap in main-content, change style of intro-text, add style and weight font to login-btn

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     align-items: center;
     padding: 40px;
     padding-top: 80px;
-    gap: 40px;
+    gap: 28px;
     max-width: 1080px;
     margin: 0 auto;
     width: 100%;
@@ -43,10 +43,11 @@ body {
 }
 
 .intro-text h2{
-    font-size: 24px;
+    font-size: 28px;
     color: #1c1e21;
-    font-weight: normal;
-    line-height: 1.34;
+    font-weight: 400;
+    font-family: 'SFProDisplay-Regular', Helvetica, Arial, sans-serif;
+    line-height: 32px;
     max-width: 500px;
 }
 
@@ -55,7 +56,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding-top: 60px
+    padding-top: 60px;
 }
 
 .login-form {
@@ -101,6 +102,8 @@ input:focus{
 }
 
 .login-btn{
+    font-style: arial;
+    font-weight: bold;
     background-color: #1877f2;
     color: white;
     width: 100%;
@@ -121,7 +124,7 @@ input:focus{
 .frogot-password {
     display: block;
     text-align: center;
-    margin: 12px 0;
+    margin: 0px 0;
     color: #1877f2;
     font-size: 14px;
     text-decoration: none;
@@ -134,6 +137,7 @@ input:focus{
 .divider{
     border-bottom: 1px solid #dadde1;
     margin: 20px 0;
+    margin-bottom: 30px;
 }
 
 .create-account{
@@ -141,7 +145,7 @@ input:focus{
     color: white;
     border: none;
     border-radius: 6px;
-    padding: 12px 16px;
+    padding: 15px 10px;
     font-weight: bold;
     cursor: pointer;
     font-size: 17px;
